--- a/index.html
+++ b/index.html
@@ -172,11 +172,10 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
         
     </div>
 
-
-    <script type="text/javascript" src="https://downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
+    <script type="text/javascript" src="https://downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 <script>
 function showMailingPopUp() {
-  require(
+  window.dojoRequire(
     ["mojo/signup-forms/Loader"],
     function(L) {
       L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"59354fc8460ac10b88bb0a375","lid":"30f05c6804","uniqueMethods":true})
