--- a/index.html
+++ b/index.html
@@ -175,5 +175,6 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
                 </div>
         
     </div>
+    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us20.list-manage.com","uuid":"59354fc8460ac10b88bb0a375","lid":"30f05c6804","uniqueMethods":true}) })</script>
   </body>
 </html>
