--- a/index.html
+++ b/index.html
@@ -30,23 +30,62 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="section-uneven">
       <div class="container">
-        <div class="row">
-          <div class="col" id="logo">
-            <img src="logo.svg" id="main-logo" />
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" href="#"><img src="logo.svg" id="logo"/></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarSupportedContent"
+          >
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item ">
+                <a class="nav-link" href="#jaktodziala">Jak to działa?</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#cennik">Cennik</a>
+              </li>
+              <li class="nav-item">
+                <button class="default-button cta-button">
+                  Rejestracja
+                </button>
+              </li>
+            </ul>
           </div>
-          <div class="col" id="menu">
-            <a href="#jaktodziala">Jak to działa?</a>
-            <a href="#cennik">Cennik</a>
-            <button class="default-button cta-button">
-              Rejestracja
-            </button>
-          </div>
-        </div>
+        </nav>
+      </div>
+    </div>
+    <div class="section-uneven">
+      <div class="container">
         <div class="row content-section" id="headline">
           <div class="col-lg-6 headline-text">
             <h1>Chroń swoje oferty przed kopiowaniem!</h1>
