Added better images

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </h2>
           </div>
           <div class="col-lg-6 d-none d-lg-block">
-            <img src="./bitmap@3x.png" alt="" />
+            <img src="./bitmap.png" alt="" />
           </div>
         </div>
       </div>
