--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="icon" type="image/png" href="favicon.png" />
     <script
@@ -90,21 +90,19 @@
           <div class="col-lg-6 headline-text">
             <h1>Chroń swoje oferty przed kopiowaniem!</h1>
             <p>
-              Kopiowanie ofert bez zgody ich właścicieli to poważny problem
-              wsród pośredników nieruchomości. <b>Rentelo</b> to narzędzie,
-              które skanuje portale ogłoszeniowe w poszukiwaniu ofert podobnych
-              do Twoich.
+              <b>Rentelo</b> to narzędzie, które skanuje portale ogłoszeniowe w
+              poszukiwaniu ofert podobnych do Twoich.
             </p>
 
             <button class="default-button cta-button">
               Zapisz się na darmowy miesiąc próbny!
             </button>
 
-            <h2 class="text-center">
+            <h2>
               Usługa startuje już w drugiej połowie 2019!
             </h2>
           </div>
-          <div class="col-lg-6 d-none d-lg-block">
+          <div class="col-lg-6 d-none d-lg-block hero-image">
             <img src="./bitmap.png" alt="" />
           </div>
         </div>
@@ -114,73 +112,95 @@
       <div class="container">
         <div class="row content-section">
           <div class="col-lg-12">
-            <h1 id="jaktodziala">Jak to działa?</h1>
-            <p>
+            <h1 id="jaktodziala" class="text-center">Jak to działa?</h1>
+            <p class="text-center">
               Wiemy jak wiele czasu i pieniędzy kosztuje przygotowanie
               odpowiedniej jakości ofert. Niestety, tworzone oferty nie są w
               żaden sposób chronione przed kopiowaniem i publikowaniem ich przez
               innych agentów.
-            </p>
-            <p>
-              <b>Rentelo</b> skanuje najpopularniejsze serwisy ogłoszeniowe i
-              informuje Cię o występowaniu ofert podobnych do Twocih. Dzięki
-              temu jesteśmy w stanie zapewnić Twoim ofertom wyłączność nie
-              tracąc czasu na własnoręczne przeszukiwanie wszystkich portali
             </p>
           </div>
         </div>
 
         <div class="row step">
           <div class="col-lg-6">
-            <h2><b>1. Krok pierwszy</b></h2>
-            <p>
-              Wklej linki do Twoich ogłoszeń. Renelo potrafi przeszukiwać oferty
-              z portali Otodom, Gratka, Morizon, Olx i Gumtree.
-            </p>
+            <div class="f-center pr-5">
+              <div class="text-row">
+                <div class="bullet"><span>1</span></div>
+                <h3>Wklej linki</h3>
+              </div>
+
+              <p>
+                <b>Rentelo</b> skanuje najpopularniejsze serwisy ogłoszeniowe i
+                informuje Cię o występowaniu ofert podobnych do Twocih. Dzięki
+                temu jesteśmy w stanie zapewnić Twoim ofertom wyłączność nie
+                tracąc czasu na własnoręczne przeszukiwanie wszystkich portali.
+              </p>
+              <p>
+                Wklej linki do Twoich ogłoszeń. Renelo potrafi przeszukiwać
+                oferty z portali Otodom, Gratka, Morizon, Olx i Gumtree.
+              </p>
+            </div>
           </div>
           <div class="col-lg-6">
             <div class="browser-mockup with-url">
+              <div class="clickbuster"></div>
+              <img class="mini-logo" src="favicon.png" />
               <h2><b>Sprawdź oferty</b></h2>
               <textarea readonly spellcheck="false">
 https://www.otodom.pl/oferta/nowoczesny-dom-dasdasI4U2Sdu.html
+
 https://gratka.pl/nieruchomosci/nowoczesny-dom/oi/9999999999
+
 https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
               >
               <button class="action-button">Sprawdź oferty</button>
+              <i class="fa fa-mouse-pointer pointer pointer-one"></i>
             </div>
           </div>
         </div>
 
         <div class="row step">
           <div class="col-lg-6 order-lg-12">
-            <h2><b>2. Krok drugi</b></h2>
-            <p>
-              Zobacz raport i reaguj! Renetlo wyszykuje ogłoszenia, które mają
-              zdjęcia i opisy podobne do Twoich ofert.
-            </p>
+            <div class="f-center pl-5">
+              <div class="text-row">
+                <div class="bullet"><span>2</span></div>
+                <h3>Sprawdź raport</h3>
+              </div>
+              <p>
+                Zobacz raport i reaguj! Renetlo wyszykuje ogłoszenia, które mają
+                zdjęcia i opisy podobne do Twoich ofert.
+              </p>
 
-            <p>
-              Możesz teraz przejśc do tych ogłoszeń i skontaktować się z
-              portalem, aby usunąć skopiowane ogłoszenie i upewnić się, że Twoje
-              oferty nie pracują dla kogoś innego!
-            </p>
+              <p>
+                Możesz teraz przejśc do tych ogłoszeń i skontaktować się z
+                portalem, aby usunąć skopiowane ogłoszenie i upewnić się, że
+                Twoje oferty nie pracują dla kogoś innego!
+              </p>
+            </div>
           </div>
           <div class="col-lg-6">
             <div class="browser-mockup with-url order-lg-1">
-              <h2><b>Raport sprawdzania ogłoszeń</b></h2>
-              <p>Znaleziono podobne oferty!</p>
+              <div class="clickbuster"></div>
 
-              <p>✅Otodom.pl - brak podobnych ofert <br /></p>
-              <p>
-                ⚠️ Gratka.pl - <b>1 podobna oferta</b> <br /><a href=""
-                  >Szczegóły</a
-                >
+              <img class="mini-logo" src="favicon.png" />
+
+              <h2><b>Raport sprawdzania ogłoszeń</b></h2>
+
+              <p>Znaleziono podobne oferty!</p>
+              <hr />
+              <p class="report-details">
+                <span> ⚠️ Gratka.pl - <b>1 podobna oferta</b> </span>
+                <a href="">Szczegóły</a>
               </p>
-              <p>
-                ⚠️ Morizon.pl - <b>2 podobne oferty</b> <br /><a href=""
-                  >Szczegóły</a
-                >
+              <hr />
+              <p class="report-details">
+                <span>⚠️ Morizon.pl - <b>2 podobne oferty</b> </span>
+                <a href="">Szczegóły</a>
               </p>
+              <hr />
+              <p>✅ Otodom.pl - brak podobnych ofert <br /></p>
+              <hr />
             </div>
           </div>
         </div>
@@ -189,25 +209,52 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
 
     <div class="section-uneven">
       <div class="container">
-        <div class="row content-section price-section">
+        <div class="row content-section">
           <div class="col">
-            <h1 id="cennik">Cennik</h1>
+            <h1 id="cennik" class="text-center">Cennik</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6">
             <div class="price-box-container">
               <div class="price-box">
-                <h1>199,99zł/msc</h1>
+                <p>🍃 Plan BASIC</p>
+                <h1>99,99zł/msc</h1>
                 <p>Funkcje:</p>
                 <hr />
                 <b>Pierwszy miesiąc za darmo!</b>
                 <hr />
                 <p>
-                  Codzienne skanowanie internetu w celu znalezienia podobnych
-                  ofert
+                  Skanowanie internetu <b>raz dziennie</b> w celu znalezienia
+                  podobnych ofert
                 </p>
 
                 <hr />
-                <p>Ochrona do 10 ofert równocześnie</p>
+                <p>Ochrona do <b>100</b> ofert równocześnie</p>
                 <hr />
                 <p>Notyfikacje e-mail</p>
+                <hr />
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="price-box-container">
+              <div class="price-box">
+                <p>⭐ Plan PRO</p>
+                <h1>299,99zł/msc</h1>
+                <p>Funkcje:</p>
+                <hr />
+                <b>Pierwszy miesiąc za darmo!</b>
+                <hr />
+                <p>
+                  Skanowanie internetu <b>co godzinę</b> w celu znalezienia
+                  podobnych ofert
+                </p>
+
+                <hr />
+                <p>Ochrona do <b>wszystkich</b> Twoich ofert</p>
+                <hr />
+                <p>Notyfikacje e-mail i <b>SMS</b></p>
                 <hr />
               </div>
             </div>
