--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Rentelo - ochrona ofert nieruchomości</title>
+    <title>Rentelo - Chroń swoje oferty przed kopiowaniem!</title>
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
@@ -124,7 +124,7 @@
 
         <div class="row step">
           <div class="col-lg-6">
-            <div class="f-center pr-5">
+            <div class="f-center step-1">
               <div class="text-row">
                 <div class="bullet"><span>1</span></div>
                 <h3>Wklej linki</h3>
@@ -162,7 +162,7 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
 
         <div class="row step">
           <div class="col-lg-6 order-lg-12">
-            <div class="f-center pl-5">
+            <div class="f-center step-2">
               <div class="text-row">
                 <div class="bullet"><span>2</span></div>
                 <h3>Sprawdź raport</h3>
