Added moar fixes

--- a/index.html
+++ b/index.html
@@ -94,13 +94,11 @@
               poszukiwaniu ofert podobnych do Twoich.
             </p>
 
+            <h2>Usługa startuje już w <b>drugiej połowie 2019!</b></h2>
+
             <button class="default-button cta-button">
               Zapisz się na darmowy miesiąc próbny!
             </button>
-
-            <h2>
-              Usługa startuje już w drugiej połowie 2019!
-            </h2>
           </div>
           <div class="col-lg-6 d-none d-lg-block hero-image">
             <img src="./bitmap.png" alt="" />
@@ -274,16 +272,15 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
               Zapisz się na darmowy miesiąc próbny!
             </button>
 
+            <h2 class="text-center">
+              Usługa startuje już w <b>drugiej połowie 2019!</b>
+            </h2>
             <button
               id="open-popup"
               class="default-button cta-button d-none d-lg-block"
             >
               Zapisz się na darmowy miesiąc próbny!
             </button>
-
-            <h2 class="text-center">
-              Usługa startuje już w drugiej połowie 2019!
-            </h2>
           </div>
         </div>
       </div>
