--- a/index.html
+++ b/index.html
@@ -284,6 +284,12 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
           </div>
         </div>
       </div>
+
+      <div class="section-footer">
+        <div class="container">
+          Copyright © 2019 Rentelo
+        </div>
+      </div>
     </div>
   </body>
 </html>
