Added contact info

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <a class="nav-link" href="#cennik">Cennik</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="mailto:kontakt@rentelo.pl">Kontakt</a>
+              </li>
+              <li class="nav-item">
                 <button class="default-button cta-button">
                   Rejestracja
                 </button>
@@ -287,7 +290,14 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
 
       <div class="section-footer">
         <div class="container">
-          Copyright © 2019 Rentelo
+          <div>
+            Copyright © 2019 Rentelo
+          </div>
+          <div>
+            <a href="mailto:kontakt@rentelo.pl"
+              ><i class="fa fa-envelope-o"></i> kontakt@rentelo.pl</a
+            >
+          </div>
         </div>
       </div>
     </div>
