--- a/index.html
+++ b/index.html
@@ -45,6 +45,46 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="https://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <style type="text/css">
+      #mc_embed_signup {
+        clear: left;
+        font: 14px Helvetica, Arial, sans-serif;
+        width: 100%;
+      }
+
+      #mc_embed_signup input.email {
+        height: 48px;
+        border: solid 1px #8584a6;
+        color: #011627;
+        border-radius: 4px;
+      }
+
+      #mc_embed_signup input.button[type=submit] {
+        height: 48px;
+        color: white;
+        background-color: #18efac;
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.16);
+        font-size: 16px;
+        font-weight: 700;
+        font-family: "Montserrat", sans-serif;
+      }
+
+      #mc_embed_signup input.email:focus {
+        outline: none;
+        border-color: #2b2fb2;
+      }
+
+      #mc_embed_signup input.email::placeholder {
+        color: #c7c7c7;
+      }
+      /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+    </style>
   </head>
   <body>
     <div class="section-uneven">
@@ -78,9 +118,12 @@
                 <a class="nav-link" href="mailto:kontakt@rentelo.pl">Kontakt</a>
               </li>
               <li class="nav-item">
-                <button class="default-button cta-button">
-                  Rejestracja
-                </button>
+                <a href="#mc_embed_signup">
+                    <button class="default-button cta-button">
+                        Rejestracja
+                      </button>
+                </a>
+                
               </li>
             </ul>
           </div>
@@ -99,9 +142,12 @@
 
             <h2>Usługa startuje już w <b>drugiej połowie 2019!</b></h2>
 
-            <button class="default-button cta-button">
-              Zapisz się na darmowy miesiąc próbny!
-            </button>
+            <a href="#mc_embed_signup">
+                <button class="default-button cta-button">
+                    Zapisz się na darmowy miesiąc próbny!
+                  </button>
+            </a>
+            
           </div>
           <div class="col-lg-6 d-none d-lg-block hero-image">
             <img src="./bitmap.png" alt="" />
@@ -133,7 +179,7 @@
 
               <p>
                 <b>Rentelo</b> skanuje najpopularniejsze serwisy ogłoszeniowe i
-                informuje Cię o występowaniu ofert podobnych do Twocih. Dzięki
+                informuje Cię o występowaniu ofert podobnych do Twoich. Dzięki
                 temu jesteśmy w stanie zapewnić Twoim ofertom wyłączność nie
                 tracąc czasu na własnoręczne przeszukiwanie wszystkich portali.
               </p>
@@ -268,22 +314,54 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
         <div class="row content-section">
           <div class="col-lg-12 interested-section">
             <h1 class="text-center">Brzmi ciekawie?</h1>
-            <button
-              id="open-popup"
-              class="default-button cta-button d-block d-lg-none w-100"
-            >
-              Zapisz się na darmowy miesiąc próbny!
-            </button>
 
-            <h2 class="text-center">
-              Usługa startuje już w <b>drugiej połowie 2019!</b>
-            </h2>
-            <button
-              id="open-popup"
-              class="default-button cta-button d-none d-lg-block"
-            >
-              Zapisz się na darmowy miesiąc próbny!
-            </button>
+            <p class="text-center">Zapisz się na darmowy miesiąc próbny! <br/>  Usługa startuje już w <b>drugiej połowie 2019!</p>
+
+
+            <div id="mc_embed_signup">
+              <form
+                action="https://kaapa.us20.list-manage.com/subscribe/post?u=59354fc8460ac10b88bb0a375&amp;id=30f05c6804"
+                method="post"
+                id="mc-embedded-subscribe-form"
+                name="mc-embedded-subscribe-form"
+                class="validate"
+                target="_blank"
+                novalidate
+              >
+                <div id="mc_embed_signup_scroll">
+                  <input
+                    type="email"
+                    value=""
+                    name="EMAIL"
+                    class="email"
+                    id="mce-EMAIL"
+                    placeholder="Adres email"
+                    required
+                  />
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div
+                    style="position: absolute; left: -5000px;"
+                    aria-hidden="true"
+                  >
+                    <input
+                      type="text"
+                      name="b_59354fc8460ac10b88bb0a375_30f05c6804"
+                      tabindex="-1"
+                      value=""
+                    />
+                  </div>
+                  <div class="clear">
+                    <input
+                      type="submit"
+                      value="Zapisz się"
+                      name="subscribe"
+                      id="mc-embedded-subscribe"
+                      class="button"
+                    />
+                  </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
