Fix thankyou jump

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
             </div>
             
 
-            <div class="thanks-message text-center d-none">
+            <div class="thanks-message text-center d-none" id="thankyou">
                 <h1 class="text-center">👍</h1>
               <h1 class="text-center">Dziękujemy!</h1>
               <h2>Zapisaliśmy Cię na darmowy miesiąc próbny! <br>Jak tylko usługa wystartuje poinformujemy Cię e-mailem.</h2>
