--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
               </p>
               <p>
                 Wklej linki do Twoich ogłoszeń. Renelo potrafi przeszukiwać
-                oferty z portali Otodom, Gratka, Morizon, Olx, Gumtree i wiele innych.
+                oferty z popularnych portali: Otodom, Gratka, Morizon, Olx, Gumtree i wielu innych.
               </p>
             </div>
           </div>
