--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ https://www.morizon.pl/oferta/nowoczesny-dom-mzn9999999</textarea
                 <h3>Sprawdź raport</h3>
               </div>
               <p>
-                Zobacz raport i reaguj! Renetlo, używając sztucznej inteligencji, wyszykuje ogłoszenia, które zawierają
+                Zobacz raport i reaguj! Renetlo, używając sztucznej inteligencji, wyszykuje ogłoszeń, które zawierają
                 zdjęcia i opisy podobne do Twoich ofert.
               </p>
 
